fixed the padding top on mobile

--- a/src/profile.scss
+++ b/src/profile.scss
@@ -10,7 +10,7 @@ $unis-blue: #163387;
   justify-content: center;     
   align-items: flex-start;
   overflow-y: auto;
-  margin-top: 8%;
+  margin-top: 2%;
 
   @media (max-width: 800px) {
     margin-left: 0;
@@ -621,7 +621,7 @@ $unis-blue: #163387;
 // Legacy responsive (keeping for compatibility)
 @media (max-width: 768px) {
   .profile-container {
-    margin-top: 35%;
+    margin-top: 5%;
   }
   
   .profile-header .profile-image-large { 
